--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.min.css?_v=20220308233853">
+   <link rel="stylesheet" href="css/style.min.css?_v=20220309002001">
    <title>Moon River</title>
 </head>
 
@@ -132,6 +132,7 @@
    </section>
 </header>
       <main>
+         <div class="form__result"><span>Спасибо</span></div>
          <section class="gender">
             <div class="gender__container container-big">
                <div class="gender__choice">
@@ -295,8 +296,8 @@
    </div>
 </footer>
    </div>
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js?_v=20220308233853"></script>
-   <script src="js/app.min.js?_v=20220308233853"></script>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js?_v=20220309002001"></script>
+   <script src="js/app.min.js?_v=20220309002001"></script>
 </body>
 
 </html>
